mismo commit, solucion css

--- a/css/style.css
+++ b/css/style.css
@@ -243,8 +243,8 @@ h5 {
   color: red;
   left: 965px;
   top: 0px;
-/* }
-.img1 {
+}
+/* .img1 {
   position: relative;
   width: 10%;
   height: 10%;
@@ -264,7 +264,7 @@ h5 {
   height: 10%;
   left: 500px;
   top: 20px;
-} */
+} */ */
 
 .imagenes {
   position: relative;
